@@ -19,4 +19,6 @@ ENV DB_PASSWORD="12345678"
 ENV DB_URL="jdbc:mysql://${DB_HOST}/gen?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai"
 ENV DB_DRIVE="com.mysql.cj.jdbc.Driver"
 
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -DUSE_DBMS=$USE_DBMS -DDB_URL=$DB_URL -DDB_USERNAME=$DB_USERNAME -DDB_PASSWORD=$DB_PASSWORD -Dsolon.config.add=$CONFIG_FILE -Duser.timezone=Asia/Shanghai -Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom -jar /gen/gen.jar" ]
+ENV JVM_PARAMS="-Djava.ext.dirs=$JAVA_HOME/lib/ext:/gen/ext -DUSE_DBMS=$USE_DBMS -DDB_URL=$DB_URL -DDB_USERNAME=$DB_USERNAME -DDB_PASSWORD=$DB_PASSWORD -Dsolon.config.add=$CONFIG_FILE -Duser.timezone=Asia/Shanghai -Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom"
+
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS $JVM_PARAMS -jar /gen/gen.jar" ]
